# fair_next

./: .gitignore  Cargo.toml  names.txt  readme.md
src/: cursive_actions.rs  fsys.rs  main.rs
