[package]
name = "fair_next"
description = "A command line tool supporting the fair selection of the next item"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["eum2o <msc-gh.eum2o@aleeas.com>"]
repository = "https://github.com/eum2o/fair_next"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
readme = "readme.md"

[dependencies]
cursive = "0.21"

[[bin]]
name = "fn"
path = "src/main.rs"
